@@ -27,6 +27,9 @@ Core and Builtins
 Library
 -------
 
+- Issue 21044: tarfile.open() now handles fileobj with an integer 'name'
+  attribute.  Based on patch by Martin Panter.
+
 - Issue #19076: Don't pass the redundant 'file' argument to self.error().
 
 - Issue #21942: Fixed source file viewing in pydoc's server mode on Windows.
